# serializer version: 1
# name: test_diagnostics_redacts_identifiers
  dict({
    'cached_service_info': True,
    'data': dict({
      'countdown': 0,
      'current_temp': 150,
      'hold': False,
      'lifted': False,
      'power': False,
      'target_temp': 195,
      'units': 'F',
    }),
    'failed_polls': 0,
    'fallback_temperature_unit': '°C',
    'last_update_success': True,
    'temperature_unit': '°F',
    'update_interval': '0:00:05',
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_polling_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 60,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_polling_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Polling interval',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Polling interval',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'polling_interval',
    'unique_id': 'AA:BB:CC:DD:EE:FF_polling_interval',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_polling_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Polling interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 60,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_polling_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 212,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 104,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Target temperature',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'target_temperature',
    'unique_id': 'AA:BB:CC:DD:EE:FF_target_temp',
    'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
  })
# ---
# name: test_entities_snapshot[number][number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Target temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 212,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 104,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '195',
  })
# ---
# name: test_entities_snapshot[select][select.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_fallback_temperature_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'fahrenheit',
        'celsius',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_fallback_temperature_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fallback temperature unit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fallback temperature unit',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_unit',
    'unique_id': 'AA:BB:CC:DD:EE:FF_temperature_unit',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[select][select.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_fallback_temperature_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Fallback temperature unit',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'fahrenheit',
        'celsius',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_fallback_temperature_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto-off countdown',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Auto-off countdown',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'AA:BB:CC:DD:EE:FF_countdown',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Auto-off countdown',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_auto_off_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Current temperature',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_temperature',
    'unique_id': 'AA:BB:CC:DD:EE:FF_current_temp',
    'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Current temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_current_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hold mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hold mode',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hold',
    'unique_id': 'AA:BB:CC:DD:EE:FF_hold',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Hold mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_hold_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Normal',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_kettle_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_kettle_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kettle position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Kettle position',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'kettle_position',
    'unique_id': 'AA:BB:CC:DD:EE:FF_lifted',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_kettle_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Kettle position',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_kettle_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'On Base',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': 'AA:BB:CC:DD:EE:FF_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Power',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Off',
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Target temperature',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'target_temperature',
    'unique_id': 'AA:BB:CC:DD:EE:FF_target_temp',
    'unit_of_measurement': <UnitOfTemperature.FAHRENHEIT: '°F'>,
  })
# ---
# name: test_entities_snapshot[sensor][sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Target temperature',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.FAHRENHEIT: '°F'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '195',
  })
# ---
# name: test_entities_snapshot[switch][switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': 'AA:BB:CC:DD:EE:FF_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[switch][switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF Power',
    }),
    'context': <ANY>,
    'entity_id': 'switch.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities_snapshot[water_heater][water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 104,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fellow_stagg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 9>,
    'translation_key': 'kettle',
    'unique_id': 'AA:BB:CC:DD:EE:FF_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_snapshot[water_heater][water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 150,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fellow Stagg EKG+ AA:BB:CC:DD:EE:FF',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 104,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 9>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 195,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.fellow_stagg_ekg_aa_bb_cc_dd_ee_ff',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
